--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <% flash.each do |type, msg| %>
+      <div class="alert"><%= msg %></div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
